# DataScience

./: .gitattributes
Retail Profitability & Discount Strategy Analysis/: README.md  app.py
projects/customer_lifetime_value_analysis/: .gitattributes  app.py
projects/customer_lifetime_value_analysis/data/processed/: business_recommendations.csv  cohort_retention_heatmap.csv  customer_clv.csv  customer_order_intervals.csv  customer_purchase_frequency.csv  monthly_retention_summary.csv  online_retail_processed.csv  order_basket_size.csv
projects/customer_lifetime_value_analysis/data/raw/: online_retail_clean.csv  online_retail_raw.csv  rfm_segments.csv
projects/customer_lifetime_value_analysis/notebook/: Customer_Analytics_Level1_Level2.ipynb  Customer_Analytics_Level3_Retention.ipynb  Customer_Analytics_Level4_CLV.ipynb  Customer_Analytics_Level5_RFM.ipynb  Customer_Analytics_Level6_Behavior.ipynb  Customer_Analytics_Level7_Recommendations.ipynb
projects/retail_profitability/: Makefile  README.md  app.py  pyproject.toml
projects/retail_profitability/notebook/: portofolio_1_bisnis_revised.ipynb
retail_profitability/: README.md  app.py
